# finnel

./: Cargo.toml
db/: Cargo.toml
db/src/: entity.rs  error.rs  id.rs  lib.rs  money.rs  query.rs  row.rs
derive/: Cargo.toml
derive/src/: entity.rs  lib.rs  query.rs
derive/src/entity/: entity.rs  field.rs
derive/src/query/: entity_ref.rs  join.rs  param.rs  query.rs  struct.rs
finnel/: Cargo.toml  diesel.toml
finnel-db/: Cargo.toml
finnel-db/src/: error.rs  id.rs  money.rs  query.rs
finnel-derive/: Cargo.toml
finnel-derive/src/: lib.rs
finnel/migrations/2024-07-10-083123_create_categories/: up.sql
finnel/migrations/2024-07-11-092324_create_merchants/: down.sql  up.sql
finnel/migrations/2024-07-12-074612_create_accounts/: up.sql
finnel/migrations/2024-07-12-142538_create_records/: up.sql
finnel/migrations/2024-07-13-100227_add_merchant_self_referencing/: down.sql  up.sql
finnel/migrations/2024-07-13-100232_add_category_self_referencing/: down.sql  up.sql
finnel/migrations/2024-08-09-111847_naive_dates/: down.sql  up.sql
finnel/migrations/2024-08-10-073734_add_date_indexes/: down.sql  up.sql
finnel/migrations/2024-08-13-082025_add_monthly_stats/: down.sql  up.sql
finnel/migrations/2024-08-17-091859_add_report/: down.sql  up.sql
finnel/migrations/2024-08-23-124546_add_direction_to_stats/: down.sql  up.sql
finnel/migrations/2024-09-02-140627_recurring_payments/: down.sql  up.sql
finnel/src/: account.rs  category.rs  consolidate.rs  date.rs  db.rs  lib.rs  merchant.rs  monthly_stats.rs  record.rs  recurring_payment.rs  report.rs  resolved.rs  result.rs  schema.patch  schema.rs  stats.rs  test.rs  transaction.rs
finnel/src/account/: mod.rs  record.rs
finnel/src/category/: change.rs  consolidate.rs  mod.rs  new.rs  query.rs
finnel/src/consolidate/: categories.rs  merchants.rs  records.rs  recurring_payments.rs  reports.rs
finnel/src/database/: error.rs  mod.rs  money.rs
finnel/src/merchant/: change.rs  consolidate.rs  mod.rs  new.rs  query.rs
finnel/src/record/: change.rs  consolidate.rs  direction.rs  mode.rs  new.rs  query.rs  split.rs
finnel/src/recurring_payment/: change.rs  frequency.rs  new.rs
finnel/src/stats/: categories.rs  merchants.rs
finnel/src/transaction/: mod.rs
finnelctl/: .mise.toml  Cargo.toml
finnelctl/src/: account.rs  calendar.rs  category.rs  cli.rs  config.rs  import.rs  main.rs  merchant.rs  record.rs  report.rs  test.rs  utils.rs
finnelctl/src/account/: mod.rs
finnelctl/src/application/: cli.rs  config.rs  mod.rs
finnelctl/src/cli/: account.rs  calendar.rs  category.rs  import.rs  merchant.rs  record.rs  report.rs
finnelctl/src/import/: boursobank.rs  logseq.rs  options.rs  profile.rs
finnelctl/src/record/: display.rs  import.rs  mod.rs
finnelctl/src/record/import/: boursobank.rs  logseq.rs  options.rs  profile.rs
finnelctl/src/test/: mod.rs
finnelctl/src/utils/: table_display.rs
finnelctl/tests/: account.rs  categories.rs  commands.rs  import.rs  main.rs  merchant.rs  record.rs  reports.rs
finnelctl/tests/account/: mod.rs
finnelctl/tests/common/: mod.rs
finnelctl/tests/fixtures/boursobank/: curated.csv  invalid_header.csv
finnelctl/tests/record/: add.rs  create.rs  import.rs  list.rs  split.rs
