[package]
name = "finnel-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.18"
oxydized-money = "0.3.0"
rusqlite = "0.31.0"
semver = "1.0.23"
thiserror = "1.0.61"

[dev-dependencies]
pretty_assertions = "1.4.0"
