[package]
name = "finnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
derive_more = "0.99.17"
oxydized-money = "0.3.0"
semver = "1.0.23"
thiserror = "1.0.61"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
log = "0.4.22"

[dependencies.diesel]
version = "2.2.1"
default-features = false
features = [
  "chrono",
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "without-deprecated",
]

[dev-dependencies]
anyhow = "1.0.86"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
