[package]
name = "finnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["from", "into", "deref", "deref_mut", "error", "display", "from_str"] }
oxydized-money = "0.3.0"
semver = "1.0.23"
log = "0.4.22"

[dependencies.diesel_migrations]
#path = "../../diesel/diesel_migrations"
version = "2.2.0"
features = ["sqlite"]

[dependencies.diesel]
#path = "../../diesel/diesel"
version = "2.2.4"
default-features = false
features = [
  "chrono",
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "without-deprecated",
]

[dev-dependencies]
anyhow = "1.0.91"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
