[package]
name = "finnelctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38" }
clap = { version = "4.5.4", features = ["string"] }
clap-verbosity-flag = "2.2.0"
csv = "1.3.0"
derive_more = "0.99.18"
finnel = { path = "../finnel" }
regex = "1.10.5"
tabled = "0.15.0"
toml = "0.8.14"
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
temp-env = "0.3.6"
