[package]
name = "finnelctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
chrono = { version = "0.4.38" }
clap = { version = "4.5.20", features = ["string"] }
clap-verbosity-flag = "2.2.2"
csv = "1.3.0"
derive_more = { version = "1.0.0", features = ["into"] }
env_logger = "0.11.5"
finnel = { path = "../finnel" }
log = "0.4.22"
regex = "1.11.1"
systemd-journal-logger = "2.2.0"
tabled = "0.16.0"
toml = "0.8.19"
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
temp-env = "0.3.6"
